# checkconstraints

./: .gitignore  README.rst  requirements.txt  setup.cfg  tox.ini
checkconstraints/: check.py
