[metadata]
name = checkconstraints
author = Sachi King
author-email = nakato@nakato.io
summary = Scrape elasticsearch for possible constraints failures
home-page = https://launchpad.net/pbr
requires-python = >=3.4
classifier =
        Environment :: Console
        Environment :: OpenStack
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.4
        Programming Language :: Python :: 3.5

[files]
packages =
    constraints-scraper

[entry_points]
console_scripts =
    check-constraints = checkconstraints.check:cli
